BIKE-5: Add REST API
