# src/main/java/com/example/bike/shop/application/entity/ProductEntity.java
@@ -6,6 +6,7 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import javax.persistence.*;
+import java.util.List;
 import java.util.UUID;
 
 @Entity
@@ -26,11 +27,15 @@ public class ProductEntity {
     @Column(name = "price")
     private Long price;
 
-    //    @ManyToMany(cascade = { CascadeType.ALL })
-//    @JoinTable(
-//            name = "order_product",
-//            joinColumns = { @JoinColumn(name = "order_id") },
-//            inverseJoinColumns = { @JoinColumn(name = "product_id") }
-//    )
-//    private List<OrderEntity> orderList;
+//    @ManyToOne
+//    @JoinColumn(name = "order_id")
+//    private OrderEntity order;
+
+    @ManyToMany(cascade = { CascadeType.ALL })
+    @JoinTable(
+            name = "customer_order_product",
+            joinColumns = { @JoinColumn(name = "product_id") },
+            inverseJoinColumns = { @JoinColumn(name = "customer_order_id") }
+    )
+    private List<OrderEntity> orderList;
 }
