# src/main/resources/openapi/bike-shop-openapi.yml
@@ -16,7 +16,7 @@ paths:
       tags:
         - "order"
       summary: "Add a new order"
-      description: ""
+      description: "Add a new order"
       operationId: "addOrder"
       consumes:
         - "application/json"
@@ -27,7 +27,137 @@ paths:
       parameters:
         - in: "body"
           name: "body"
-          description: "Pet object that needs to be added to the store"
+          description: "An order body that need to be created"
+          required: true
+          schema:
+            $ref: "#/definitions/Order"
+      responses:
+        "201":
+          description: "successful operation"
+        "400":
+          description: "bad request"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "404":
+          description: "Not found"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: "Internal Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      tags:
+        - "order"
+      summary: "Get all orders"
+      description: "Get all orders"
+      operationId: "getOrders"
+      consumes:
+        - "application/json"
+        - "application/xml"
+      produces:
+        - "application/xml"
+        - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Order"
+        "404":
+          description: "Not found"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: "Internal Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /order/{orderId}:
+    get:
+      tags:
+        - "order"
+      summary: "Get an order by Id"
+      description: ""
+      operationId: "getOrderById"
+      consumes:
+        - "application/json"
+        - "application/xml"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - in: "path"
+          name: "orderId"
+          description: "Id of an order"
+          type: string
+          format: "uuid"
+          required: true
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Order"
+        "404":
+          description: "Not found"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: "Internal Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      tags:
+        - "order"
+      summary: "Delete an order by Id"
+      description: "Delete an order by Id"
+      operationId: "deleteOrderById"
+      consumes:
+        - "application/json"
+        - "application/xml"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - in: "path"
+          name: "orderId"
+          description: "Id of an order"
+          type: string
+          format: "uuid"
+          required: true
+      responses:
+        "200":
+          description: "successful operation"
+        "404":
+          description: "Not found"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: "Internal Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+        - "order"
+      summary: "Update an order by Id"
+      description: "Update an order by Id"
+      operationId: "updateOrderById"
+      consumes:
+        - "application/json"
+        - "application/xml"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - in: "path"
+          name: "orderId"
+          description: "Id of an order"
+          type: string
+          format: "uuid"
+          required: true
+        - in: "body"
+          name: "body"
+          description: "An order body that need to be updated"
           required: true
           schema:
             $ref: "#/definitions/Order"
@@ -35,9 +165,19 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            type: "string"
-        "405":
-          description: "Invalid input"
+            $ref: "#/definitions/Order"
+        "400":
+          description: "bad request"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "404":
+          description: "Not found"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: "Internal Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /user/login:
     get:
       tags:
@@ -148,23 +288,11 @@ definitions:
         format: "int64"
     xml:
       name: "Product"
-  Tag:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-    xml:
-      name: "Tag"
-  ApiResponse:
+  ErrorResponse:
     type: "object"
     properties:
       code:
         type: "integer"
-        format: "int32"
-      type:
-        type: "string"
+        format: "int64"
       message:
         type: "string"
